Add KaraokeArea to TownService and Frontend (#1)
* Add KaraokeArea to TownService

* Fix comments

* Add KaraokeAreaController

* Fix comments

* implementing karaoke area

* more. implementing

* more implem

* testing this yay

* import changes

* basically you can See a karaoke area but clicking on it doesn't do anything lol

* adding a title

* added title field

* rest of modal work

* added karaoke modal

---------
